fix(avatars): hide the webcam option on mobile

--- a/app/styles/_avatars.scss
+++ b/app/styles/_avatars.scss
@@ -125,6 +125,10 @@ a.avatar-wrapper {
       }
     }
   }
+
+  .avatar-options.mobile {
+    display: none;
+  }
 }
 
 @import 'cropper';
